--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>spring-astra-bank-portal</finalName>
 	</build>
 
 </project>
